fix for fixed navbar covering jumbotron on scaling page to cell size

--- a/src/components/TopNav/TopNav.css
+++ b/src/components/TopNav/TopNav.css
@@ -1,7 +1,3 @@
 .navbar {
   margin-bottom: 0;
 }
-
-.navbar.container {
-  width:100%
-}
