--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,9 @@
 body {
   margin: 0;
-  padding: 0;
+  padding-top: 50px;  
   font-family: sans-serif;
+}
+
+@media screen and (max-width: 768px) {
+  body { padding-top: 120px; }
 }
